@@ -17,3 +17,4 @@ Daniel Ostrow <dostrow@gentoo.org>
 Matsuu Takuto <matsuu@gentoo.org>
 Joshua Kinard <kumba@gentoo.org>
 Lars Weiler <pylon@gentoo.org>
+Andrew Gaffney <agaffney@gentoo.org>
